Fix layout bug when a <figure> is inside a <p>.

--- a/www/css/style.windows.css
+++ b/www/css/style.windows.css
@@ -3261,7 +3261,8 @@ img.inline-latex {
 }
 
 p.imgonly,
-div.imgonly {
+div.imgonly,
+figure {
 	text-align: center;
 	margin: auto;
 }
